puppet (0.25.1-3) unstable; urgency=low

  * cherry pick upstream fix for puppetrun with tags (closes: #559092)

 -- Nigel Kersten <nigel@explanatorygap.net>  Wed, 16 Dec 2009 10:53:39 -0800

puppet (0.25.1-2) unstable; urgency=low

  * Add puppetqd executable to puppetmaster package (closes: #554624)

 -- Nigel Kersten <nigel@explanatorygap.net>  Thu, 05 Nov 2009 11:23:10 -0800

puppet (0.25.1-1) unstable; urgency=low

  * New upstream release of 0.25.1

 -- Nigel Kersten <nigel@explanatorygap.net>  Tue, 27 Oct 2009 10:35:40 -0700

puppet (0.25.0-1) unstable; urgency=low

  * New upstream release
  * Tweak .install files to cope with new use of sbindir from upstream.
  * Add the new auth.conf config file to the puppetmaster package.

 -- Nigel Kersten <nigel@explanatorygap.net>  Sun, 16 Aug 2009 05:34:17 -0700

puppet (0.24.8-3) unstable; urgency=low

  [ Micah Anderson ]
  * Make logcheck ignore 'Reopening log files' on puppetmaster (Closes: #538721)

  [ Nigel Kersten ]
  * switch from unreleased to unstable.

 -- Nigel Kersten <nigel@explanatorygap.net>  Sun, 16 Aug 2009 05:33:53 -0700

puppet (0.24.8-2) unstable; urgency=high

  [ Micah Anderson ]
  * Cherry-pick upstream versioncmp fix (redmine:#2110)

  [ Andrew Pollock ]
  * Enable waiting for certificates for the default value (upstream default
    that was previously disabled or enabled with a 5 second value)
  * Re-ship the vim syntax file in the correct location (it fell out after the
    0.24.5-3 upload) (closes: #530752)
  * Re-add the 0.24.5-3 changelog entry
  * debian/puppet.postrm: don't delete the user or group (closes: #528068,
    #527381)
  * debian/puppet.{preinst,postinst}: Applied modified patch from Stig
    Sandbeck Mathisen to call conditionally call adduser in the postinst, if
    it's available

  [ Nigel Kersten ]
  * Switched to use install.rb, primarily to stop shebangs using /usr/bin/env
  * Stopped using dh_movefiles, moved to dh_install