@@ -1,8 +1,10 @@
 puppet (0.25.1-3) unstable; urgency=low
 
   * cherry pick upstream fix for puppetrun with tags (closes: #559092)
+  * cherry pick upstream fix for supplementary groups not being reset.
+    (CVE-2009-3564) (closes: #551073)
 
- -- Nigel Kersten <nigel@explanatorygap.net>  Wed, 16 Dec 2009 10:53:39 -0800
+ -- Nigel Kersten <nigelk@google.com>  Wed, 16 Dec 2009 11:04:29 -0800
 
 puppet (0.25.1-2) unstable; urgency=low
 
